--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "python-dotenv>=1.1.1",
-    "requests>=2.32.5",
+    "pygame==2.6.1",
 ]
